--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: onionshare
-base: core24
+base: core22
 version: "2.6.2"
 summary: Securely and anonymously share files, host websites, and chat using Tor
 description: |
@@ -11,10 +11,11 @@ description: |
 grade: stable # stable or devel
 confinement: strict
 
-platforms:
-  amd64:
-  arm64:
-  armhf:
+architectures:
+  - build-on: i386
+  - build-on: amd64
+  - build-on: arm64
+  - build-on: armhf
 
 apps:
   onionshare:
