--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -207,11 +207,9 @@ parts:
     plugin: nil
     build-snaps:  # List all content-snaps and base snaps you're using here
       - core24
-      - core22
       - go/latest/stable
-      - gnome-46-2404-sdk
     override-prime: |
       set -eux
-      for snap in core24 core22 go/latest/stable gnome-46-2404-sdk; do  # List all content-snaps and base snaps you're using here
+      for snap in core24 go/latest/stable; do  # List all content-snaps and base snaps you're using here
         cd "/snap/$snap/current" && find . -type f,l -exec rm -f "$CRAFT_PRIME/{}" \;
       done
