Refactor how we build the snap (use requirements.txt files exported from poetry). Switch to core24 base

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -287,7 +287,7 @@ jobs:
           sudo ufw disable
 
       - name: Build snap
-        run: sudo snapcraft --verbosity debug
+        run: sudo snapcraft -v
 
       - name: Compress lxd directory and set proper permissions
         run: |
