--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: onionshare
-base: core22
+base: core24
 version: "2.6.2"
 summary: Securely and anonymously share files, host websites, and chat using Tor
 description: |
@@ -11,11 +11,10 @@ description: |
 grade: stable # stable or devel
 confinement: strict
 
-architectures:
-  - build-on: i386
-  - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
+platforms:
+  amd64:
+  arm64:
+  armhf:
 
 apps:
   onionshare:
@@ -47,16 +46,8 @@ apps:
       LD_LIBRARY_PATH: $LD_LIBRARY_PATH:$SNAP/usr/local/lib
 
 parts:
-  onionshare-cli:
-    source: ./cli
-    plugin: nil
-    override-pull: |
-      craftctl default
-      rm pyproject.toml poetry.lock
-    after: [tor, obfs4, snowflake-client, meek-client]
-
   onionshare:
-    source: ./desktop
+    source: .
     plugin: python
     build-packages:
       - build-essential
@@ -88,7 +79,6 @@ parts:
       - liblcms2-2
       - libnspr4
       - libnss3
-      - libodbc1
       - libpango-1.0-0
       - libpangocairo-1.0-0
       - libpng16-16
@@ -139,42 +129,15 @@ parts:
       - libxkbfile1
     override-pull: |
       craftctl default
-      rm pyproject.toml poetry.lock
-      cat > requirements.txt << EOF
-      # onionshare_cli
-      click
-      flask==2.3.2
-      flask-compress==1.13
-      flask-socketio==5.3.4
-      psutil
-      pysocks
-      requests[socks]
-      unidecode
-      urllib3
-      eventlet
-      setuptools
-      pynacl
-      colorama
-      gevent-websocket
-      stem==1.8.1
-      waitress
-      werkzeug==3.0.6
-      # onionshare
-      PySide6==6.5.2
-      qrcode
-      packaging
-      EOF
     override-build: |
+      test -e $CRAFT_PART_INSTALL/bin/python3 && chmod 755 $CRAFT_PART_INSTALL/bin/python3 || true
       python3 -m venv $CRAFT_PART_INSTALL
       . $CRAFT_PART_INSTALL/bin/activate
-      pip install -U pip setuptools wheel
-      pip install -U -r requirements.txt
-      pip install -U ../../onionshare-cli/src
-      pip install -U .
+      pip install -r snap/local/cli-requirements.txt -r snap/local/desktop-requirements.txt
+      cd desktop && pip install ../cli && pip install .
       deactivate
       sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare
       sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare-cli
-    after: [onionshare-cli]
 
   tor:
     source: https://dist.torproject.org/tor-0.4.8.14.tar.gz
@@ -201,6 +164,7 @@ parts:
     source: https://gitlab.com/yawning/obfs4.git
     source-type: git
     source-tag: obfs4proxy-0.0.14
+    after: [tor]
 
   snowflake-client:
     plugin: go
@@ -211,6 +175,7 @@ parts:
     source-tag: v2.10.1
     organize:
       bin/client: bin/snowflake-client
+    after: [obfs4]
 
   meek-client:
     plugin: go
@@ -222,6 +187,7 @@ parts:
     override-build: |
       cd meek-client
       go build -o $SNAPCRAFT_PART_INSTALL/bin/meek-client ./...
+    after: [snowflake-client]
 
   # This part removes all the files in this snap which already exist in
   # connected content and base snaps. Since these files will be available
@@ -232,7 +198,6 @@ parts:
   #
   cleanup:
     after:  # Make this part run last; list all your other parts here
-      - onionshare-cli
       - onionshare
       - tor
       - libevent
@@ -241,11 +206,11 @@ parts:
       - meek-client
     plugin: nil
     build-snaps:  # List all content-snaps and base snaps you're using here
-      - core22
+      - core24
       - go/latest/stable
-      - gnome-42-2204-sdk
+      - gnome-46-2404
     override-prime: |
       set -eux
-      for snap in core22 go/latest/stable gnome-42-2204-sdk; do  # List all content-snaps and base snaps you're using here
+      for snap in core24 go/latest/stable gnome-46-2404; do  # List all content-snaps and base snaps you're using here
         cd "/snap/$snap/current" && find . -type f,l -exec rm -f "$CRAFT_PRIME/{}" \;
       done
