Revert "Replace libgtk-3-0 with libgtk-3-0t64 which might help building on armhf"

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -73,7 +73,7 @@ parts:
       - libgl1
       - libglvnd0
       - libglx0
-      - libgtk-3-0t64
+      - libgtk-3-0
       - libharfbuzz0b
       - libjpeg8
       - liblcms2-2
