Fix macos intel build to actually build on an Intel mac (macos-latest switched to arm in 2024)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,7 @@ jobs:
           path: ~\onionshare-win64.zip
 
   build-mac-intel:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
 
