--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,7 @@ jobs:
           path: ~\onionshare-win64.zip
 
   build-mac-intel:
-    runs-on: macos-13
+    runs-on: macos-15-large
     steps:
       - uses: actions/checkout@v4
 
